--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "flow-bin": "^0.54.0",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^3.5.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "sinon": "^3.2.1",
     "webpack": "^3.5.5"
   },
@@ -39,11 +39,16 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.3",
     "babel-plugin-module-resolver": "^2.7.1",
+    "console-polyfill": "^0.3.0",
     "css-loader": "^0.28.7",
     "css-modules-require-hook": "^4.0.6",
     "dotenv": "^4.0.0",
+    "es3ify-loader": "^0.2.0",
+    "es5-shim": "^4.5.9",
+    "es6-promise": "^4.1.1",
     "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fetch-ie8": "^1.5.0",
     "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
     "json-loader": "^0.5.7",
