--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "sinon": "^3.2.1",
-    "webpack": "^3.5.5"
+    "webpack": "1.13.2"
   },
   "dependencies": {
     "asset-require-hook": "^1.1.0",
@@ -47,7 +47,7 @@
     "es5-shim": "^4.5.9",
     "es6-promise": "^4.1.1",
     "eslint-loader": "^1.9.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "1.0.1",
     "fetch-ie8": "^1.5.0",
     "file-loader": "^0.11.2",
     "jquery": "^3.2.1",
