--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,18 @@
         "transform-object-rest-spread",
         "transform-flow-strip-types",
         [
+            "transform-regenerator", {
+                "async": false
+            }
+        ],
+        [
+            "transform-runtime", {
+                "helpers": false,
+                "polyfill": false,
+                "regenerator": true
+            }
+        ],
+        [
             "module-resolver",
             {
                 "root": [
