--- a/package.json
+++ b/package.json
@@ -14,52 +14,57 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "7.1.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "eslint": "^4.6.0",
-    "eslint-plugin-flowtype": "^2.35.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint": "3.16.1",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-react": "6.4.1",
     "express": "^4.15.4",
     "flow-bin": "^0.54.0",
-    "isomorphic-fetch": "^2.2.1",
     "mocha": "^3.5.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "sinon": "^3.2.1",
-    "webpack": "1.13.2"
+    "webpack": "1.14.0"
   },
   "dependencies": {
     "asset-require-hook": "^1.1.0",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.3",
-    "babel-plugin-module-resolver": "^2.7.1",
+    "bluebird": "^3.5.0",
     "console-polyfill": "^0.3.0",
     "css-loader": "^0.28.7",
     "css-modules-require-hook": "^4.0.6",
     "dotenv": "^4.0.0",
     "es3ify-loader": "^0.2.0",
-    "es5-shim": "^4.5.9",
+    "es5-shim": "4.5.9",
     "es6-promise": "^4.1.1",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "1.6.0",
     "extract-text-webpack-plugin": "1.0.1",
     "fetch-ie8": "^1.5.0",
     "file-loader": "^0.11.2",
-    "jquery": "^3.2.1",
+    "jquery": "1.12.4",
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "lodash": "^4.13.1",
+    "lodash": "3.10.1",
+    "object-assign": "^4.1.1",
     "path-to-regexp": "^1.5.0",
     "postcss-less": "^1.1.0",
     "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-rc.3",
-    "rxjs": "^5.0.3",
+    "request": "^2.81.0",
+    "rx": "4.1.0",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
