--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "webpack-cleanup-plugin": "^0.5.1"
   }
 }
