modified webpack configs.

--- a/package.json
+++ b/package.json
@@ -6,60 +6,61 @@
   "scripts": {
     "test": "mocha --compilers js:babel-register",
     "build": "babel -d ./build src/",
-    "start:dev": "webpack --context src/ --config webpack.config.js && babel-node src/server.js",
-    "start:prod": "NODE_ENV=production webpack --context src/ --config webpack.config.js && babel-node src/server.js",
+    "start:dev": "webpack --context src/ --config webpack.config.dev.js && babel-node src/server.js",
+    "start:prod": "NODE_ENV=production webpack --context src/ --config webpack.config.prod.js && babel-node src/server.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "lint": "eslint src/"
   },
   "license": "ISC",
   "devDependencies": {
+    "asset-require-hook": "^1.1.0",
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.1.3",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "css-modules-require-hook": "^4.0.6",
     "eslint": "^4.6.0",
     "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-react": "^7.3.0",
-    "express": "^4.15.4",
-    "flow-bin": "^0.54.0",
-    "isomorphic-fetch": "^2.2.1",
-    "mocha": "^3.5.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "sinon": "^3.2.1",
-    "webpack": "^3.5.5"
-  },
-  "dependencies": {
-    "asset-require-hook": "^1.1.0",
-    "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "^7.1.3",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "css-loader": "^0.28.7",
-    "css-modules-require-hook": "^4.0.6",
-    "dotenv": "^4.0.0",
     "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "express": "^4.15.4",
     "file-loader": "^0.11.2",
-    "jquery": "^3.2.1",
+    "flow-bin": "^0.54.0",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "lodash": "^4.13.1",
-    "path-to-regexp": "^1.5.0",
+    "mocha": "^3.5.0",
     "postcss-less": "^1.1.0",
     "postcss-loader": "^2.0.6",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "sinon": "^3.2.1",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^4.0.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.13.1",
+    "path-to-regexp": "^1.5.0",
     "pug": "^2.0.0-rc.3",
     "rxjs": "^5.0.3",
     "serve-favicon": "^2.4.3",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "uuid": "^3.0.1",
-    "webpack-cleanup-plugin": "^0.5.1"
+    "uuid": "^3.0.1"
   }
 }
