--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register",
-    "build": "babel -d ./build src/",
-    "start:dev": "webpack --context src/ --config webpack.config.dev.js && babel-node src/server.js",
-    "start:prod": "NODE_ENV=production webpack --context src/ --config webpack.config.prod.js && babel-node src/server.js",
+    "build": "NODE_ENV=production webpack --context src/ --config webpack.config.prod.js",
+    "start:dev": "babel-node src/server.js",
+    "start:prod": "yarn run build && NODE_ENV=production babel-node src/server.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "lint": "eslint src/"
   },
@@ -17,12 +17,13 @@
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.3",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^6.2.4",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-module-resolver": "^2.7.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -30,11 +31,11 @@
     "css-loader": "^0.28.7",
     "css-modules-require-hook": "^4.0.6",
     "eslint": "^4.6.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-react": "^7.3.0",
-    "eslint-loader": "^1.9.0",
-    "extract-text-webpack-plugin": "^3.0.0",
     "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "flow-bin": "^0.54.0",
     "isomorphic-fetch": "^2.2.1",
@@ -46,11 +47,15 @@
     "postcss-loader": "^2.0.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "3.0.0-beta.5",
     "sinon": "^3.2.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.8.2",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
