--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "asset-require-hook": "^1.1.0",
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.3",
     "babel-cli": "^6.26.0",
@@ -42,6 +41,8 @@
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "loader-utils": "^1.1.0",
+    "mime": "^2.0.1",
     "mocha": "^3.5.0",
     "postcss-less": "^1.1.0",
     "postcss-loader": "^2.0.6",
@@ -52,7 +53,6 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
-    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-hot-middleware": "^2.19.1",
