--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,20 @@
 {
     "presets": [
         "es2015",
+        "stage-0",
         "react"
     ],
     "plugins": [
         "transform-class-properties",
         "transform-object-rest-spread",
         "transform-flow-strip-types",
+        [
+            "transform-runtime", {
+                "helpers": false,
+                "polyfill": false,
+                "regenerator": true
+            }
+        ],
         [
             "module-resolver",
             {
