--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "^7.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -23,9 +22,11 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
     "css-modules-require-hook": "^4.0.6",
@@ -37,17 +38,17 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "flow-bin": "^0.54.0",
-    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.7",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "loader-utils": "^1.1.0",
     "mime": "^2.0.1",
     "mocha": "^3.5.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-less": "^1.1.0",
     "postcss-loader": "^2.0.6",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "3.0.0-beta.5",
     "sinon": "^3.2.1",
     "style-loader": "^0.18.2",
@@ -59,11 +60,15 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "dotenv": "^4.0.0",
     "jquery": "^3.2.1",
     "lodash": "^4.13.1",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "^1.5.0",
+    "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.3",
+    "request": "^2.81.0",
     "rxjs": "^5.0.3",
     "serve-favicon": "^2.4.3",
     "uuid": "^3.0.1"
