--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-register": "^6.26.0",
     "css-loader": "^0.28.7",
     "css-modules-require-hook": "^4.0.6",
+    "dotenv-webpack": "^1.5.4",
     "eslint": "^4.6.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-flowtype": "^2.37.0",
